@@ -26,10 +26,7 @@ fixtures:
     # Fixtures for ldap accectance test
     simp_openldap: https://github.com/simp/pupmod-simp-simp_openldap
     # Fixtures for ds389 test
-    #simp_ds389: https://github.com/simp/pupmod-simp-simp_ds389
-    simp_ds389:
-      repo: https://github.com/jeannegreulich/pupmod-simp-simp_ds389
-      branch: SIMP-9699-b
+    simp_ds389: https://github.com/simp/pupmod-simp-simp_ds389
     ds389: https://github.com/simp/pupmod-simp-ds389
     simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld
     firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld
