@@ -387,6 +387,7 @@ pup6.pe-ldap:
   <<: *acceptance_base
   script:
     - 'bundle exec rake beaker:suites[ldap,default]'
+    - 'bundle exec rake beaker:suites[ds389,default]'
   retry: 1
 
 pup6.pe-ad-fips:
@@ -425,6 +426,7 @@ pup6.pe-oel-ldap:
   <<: *with_SIMP_ACCEPTANCE_MATRIX_LEVEL_3
   script:
     - 'bundle exec rake beaker:suites[ldap,oel]'
+    - 'bundle exec rake beaker:suites[ds389,oel]'
 
 pup6.x:
   <<: *pup_6_x
