@@ -2,15 +2,12 @@ require 'spec_helper_acceptance'
 
 test_name 'Setup SSSD clients to talk to LDAP'
 
-
-
-describe 'LDAP' do
+describe '389ds' do
 
   ldap_servers = hosts_with_role(hosts,'ldap')
   clients      = hosts_with_role(hosts,'client')
-  server_fqdn  = fact_on(ldap_servers.first,'fqdn')
-  domain       = fact_on(ldap_servers.first, 'domain')
-  base_dn      = domain.split('.').map{ |d| "DC=#{d}" }.join(',')
+  #base dn must match what is set in server setup.
+  base_dn      = 'dc=test,dc=org'
 
   let(:client_manifest) { <<~EOS
     include '::sssd'
@@ -45,48 +42,51 @@ describe 'LDAP' do
       ldap_default_authtok_type => 'password'
     }
 
-#      class { 'nsswitch':
-#        passwd => ['sss', 'files'],
-#        group  => ['sss', 'files'],
-#        shadow => ['sss', 'files'],
-#      }
+    class { 'nsswitch':
+      passwd => ['sss', 'files'],
+      group  => ['sss', 'files'],
+      shadow => ['sss', 'files'],
+    }
     EOS
   }
+  ldap_servers.each do |server|
+    server_fqdn  = fact_on(server,'fqdn')
+    domain       = fact_on(server, 'domain')
+    clients.each do |client|
+      context 'on each client set up sssd' do
+        # set sssd domains for template
+        let(:sssd_extra) { <<~EOM
+            sssd::enable_files_domain: true
+          EOM
+        }
+        let(:fqdn) {fact_on(client,'fqdn')}
 
-  clients.each do |client|
-    context 'on each client set up sssd' do
-      # set sssd domains for template
-      let(:sssd_extra) { <<~EOM
-          sssd::enable_files_domain: true
-        EOM
-      }
+        let(:client_hieradata)  {
+          ERB.new(File.read(File.expand_path('templates/ds389_hiera.yaml.erb',File.dirname(__FILE__)))).result(binding) + "\n#{sssd_extra}"
+        }
 
-      let(:base_dn) { 'dc=test,dc=org'}
+        it 'should run puppet' do
+  #       on(client, 'mkdir -p /usr/local/sbin/simp')
+          set_hieradata_on(client, client_hieradata)
+          apply_manifest_on(client, client_manifest, :catch_failures => true)
+        end
 
-      let(:client_hieradata)  {
-        ERB.new(File.read(File.expand_path('templates/ds389_hiera.yaml.erb',File.dirname(__FILE__)))).result(binding) + "\n#{sssd_extra}"
-      }
+        it 'should be idempotent' do
+          # ldap provider has checks for sssd version when creating the
+          # sssd.conf entry.  There for it might chnage the second run when
+          # it knows the version.  Check for idempotency on the third run
+          apply_manifest_on(client, client_manifest, :catch_failures => true)
+          apply_manifest_on(client, client_manifest, :catch_changes => true)
+        end
 
-      it 'should run puppet' do
-        on(client, 'mkdir -p /usr/local/sbin/simp')
-        set_hieradata_on(client, client_hieradata)
-        apply_manifest_on(client, client_manifest, :catch_failures => true)
-      end
-
-      it 'should be idempotent' do
-        # ldap provider has checks for sssd version when creating the
-        # sssd.conf entry.  There for it might chnage the second run when
-        # it knows the version.  Check for idempotency on the third run
-        apply_manifest_on(client, client_manifest, :catch_failures => true)
-        apply_manifest_on(client, client_manifest, :catch_changes => true)
-      end
-
-      it 'should see ldap users' do
-        ['testuser','realuser'].each do |user|
-          id = on(client, "id #{user}")
-          expect(id.stdout).to match(/#{user}/)
+        it 'should see ldap users' do
+          ['testuser','realuser'].each do |user|
+            id = on(client, "id #{user}")
+            expect(id.stdout).to match(/#{user}/)
+          end
         end
       end
+
     end
   end
 end
